style.css
@font-face {
    font-family: "Myriad";
    src: url("/fonts/Myriad.ttf");
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: "Noto";
    src: url("/fonts/NotoSans.ttf");
    font-weight: normal;
    font-style: normal;
}

@media (width <= 960px) {
    .PC_ONLY {
        display: none !important;
    }
}
@media (960px < width) {
    .SP_ONLY {
        display: none !important;
    }
}

/*カラースキーム*/
:root {
    --mainBlueColor: #617bfa;
    --mainYellowColor: #f9c54a;
    &[data-theme="dark"] {
        --bgThemeColor: #000000; /*#222636*/
        --bgPlainColor: #000000;
        --bgThinColor: #333733;
        --hoverColor: #222522;
        --pColor: #e8eaed;
        --linkColor: #7da9fe;
        --shadowColor: #000000;
    }
    &[data-theme="light"] {
        --bgThemeColor: #ebf0ff;
        --bgPlainColor: #ffffff;
        --bgThinColor: #cccccc;
        --hoverColor: #dddddd;
        --pColor: #202124;
        --linkColor: #1558d6;
        --shadowColor: #7a7a7a;
    }
}

* {
    scroll-behavior: smooth;
    box-sizing: border-box;
    transition: 0.25s;
    line-height: 1.35em;
    font-family: "Myriad", "Noto", sans-serif;
}

/*basic style*/
html {
    padding: 0;
    background: var(--bgThemeColor);
    overflow-y: scroll;
}
body {
    margin: 0;
    position: relative;
    @media (width < 960px) {
        margin-top: 80px;
    }
    @media (960px <= width) {
        margin-top: 6em;
    }
}
h1 {
    text-align: center;
}
p {
    margin: 1em;
}
p,
span,
h1,
h2,
h3,
th,
td {
    color: var(--pColor);
}
a {
    color: var(--linkColor);
}
/*positioning*/
.left {
    float: left;
    text-align: left;
}
.leftAlone {
    text-align: left;
}
.right {
    text-align: right;
}
.center {
    text-align: center;
}

/*Lefter Div*/
.centerBoxContainer {
    @media (width < 960px) {
        display: flex;
        width: 94%;
        margin: 2em 3%;
        justify-content: space-between;
        align-items: flex-start;
    }
}

.kkBox {
    overflow: hidden;
    border: 1px solid var(--pColor);
    box-sizing: border-box;
    background: var(--bgPlainColor);
    border-radius: 10px;
    box-shadow: 0 0 4px var(--shadowColor);
    @media (width < 960px) {
        width: 48%;
    }
    @media (960px <= width) {
        position: fixed;
        top: 6em;
        left: 1%;
        width: 18%;
        overflow-y: auto;
    }

    /* kk itself */
    .kkContainer {
        text-align: center;
        margin: 0;
        display: flex;
        width: 100%;
        transition: transform 0.5s ease;
    }
    .kkContent {
        margin: 0;
        flex: 0 0 100%;
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 0;
        aspect-ratio: 3 / 4;
        a {
            display: block;
            width: 100%;
        }
    }
    .controls {
        position: sticky;
        bottom: 0;
        width: 100%;
        height: 30px;
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 8px;
        padding: 8px;
    }
}

.ntBox {
    background: var(--bgPlainColor);
    box-shadow: 0 0 4px var(--shadowColor);
    border: 1px solid var(--pColor);
    @media (width < 960px) {
        width: 48%;
        border-radius: 10px;
    }
    @media (960px <= width) {
        position: fixed;
        top: 21em;
        right: 1%;
        width: 18%;
    }
    .ntTitle {
        color: var(--pColor);
        width: 100%;
        text-align: center;
        border-bottom: 1px solid var(--pColor);
        padding: 0.3em 0;
    }
    .ntContent {
        display: block;
        width: 100%;
        padding: 8px 0;
        text-decoration: none;

        &:hover {
            background-color: var(--hoverColor);
        }
        .ntThumb {
            width: 92%;
            margin: 0 auto;
            border-radius: 10px;
            border: 1px solid var(--pColor);
            img {
                display: block;
                width: 100%;
                object-fit: cover;
                border-radius: 10px;
            }
        }
        .ntArticleName {
            color: var(--pColor);
            text-decoration: none;
            margin: 10px 4% 0;
        }
    }
}

/*Righter Div*/
@media (width < 960px) {
    .classProgressBase {
        position: relative;
        background: var(--bgThinColor);
        margin-top: -20px;
        padding: 0 0;
        width: 100%;
        height: 75px;
        text-align: center;
    }
}
@media (960px <= width < 1120px) {
    .classProgressBase {
        position: fixed;
        background: var(--bgThinColor);
        top: 6em;
        padding: 0 1em;
        right: 1%;
        width: 18%;
        height: 18em;
    }
}
@media (1120px <= width) {
    .classProgressBase {
        position: fixed;
        background: var(--bgThinColor);
        top: 6em;
        padding: 0 1em;
        right: 1%;
        width: 18%;
        height: 13.8em;
    }
}

@media (width < 960px) {
    .classProgressSet {
        display: flex;
    }
    #currentTime {
        display: none;
    }
    #classProgressParCurr {
        flex-grow: 1;
        margin: 0;
        padding: 0;
        font-size: 14px;
    }
    #classProgressParNext {
        flex-grow: 1;
        border-left: 2px solid var(--pColor);
        margin: 0;
        padding: 0;
        font-size: 14px;
    }
    #classProgressBar {
        position: absolute;
        bottom: 0.8em;
        width: calc(90vw - 3em);
        margin-left: 5vw;
        background: var(--bgThemeColor);
        -webkit-appearance: none;
        -moz-appearance: none;
        appearance: none;
        border: 1px solid var(--pColor);
    }
    #classProgressVal {
        position: absolute;
        bottom: 0.8em;
        right: 5vw;
        display: inline-block;
        width: 2em;
        text-align: right;
        line-height: 1.1em;
    }
}
@media (960px <= width) {
    #currentTime {
        margin: 1em 0 0 0;
    }
    #classProgressBar {
        width: calc(18vw - 5em);
        background: transparent;
        -webkit-appearance: none;
        -moz-appearance: none;
        appearance: none;
        border: 1px solid var(--pColor);
    }
    #classProgressParCurr {
        border-top: 2px solid var(--pColor);
        margin: 0.85em 0 0 0;
        padding-top: 0.5em;
    }
    #classProgressParNext {
        border-top: 2px solid var(--pColor);
        margin: 1em 0 0 0;
        padding-top: 0.5em;
    }
}
.larger {
    font-size: 180%;
}
/*Banner Media*/
@media (width < 960px) {
    #kitchenCarBanner {
        display: block;
        width: 94vw;
        margin: auto;
    }
}
@media (960px <= width) {
    #kitchenCarBanner {
        position: fixed;
        top: 32em;
        left: 1%;
        width: 18%;
    }
}
.kitchenCarBannerImg {
    border-radius: 10px;
}
/*Center Div*/
@media (width < 960px) {
    .centerContentsBase {
        width: 94%;
        margin: 2em 3% 2em;
    }
}
@media (960px <= width) {
    .centerContentsBase {
        margin-left: 20%;
        width: 60%;
    }
}
/*link buttons*/
div.linkButtons {
    border: none;
    width: 100%;
    display: flex;
    gap: 5px;
    flex-wrap: wrap;
    justify-content: space-around;
    a {
        display: flex;
        align-items: center;
        justify-content: center;
        margin-bottom: 0.6rem;
        text-align: center;
        background: var(--bgPlainColor);
        color: var(--pColor);
        text-decoration: none;
        border-radius: 8px;
        box-shadow: 0 0 4px var(--shadowColor);
        border: 2px solid black;

        &:nth-child(3n + 4) {
            border: 3px solid orange;
        }
        &:nth-child(3n + 5) {
            border: 3px solid royalblue;
        }
        &:nth-child(3n + 6) {
            border: 3px solid deeppink;
        }
        img {
            width: 100%;
            border-radius: inherit;
            aspect-ratio: 1 / 1;
        }
        &:hover {
            background: var(--pColor);
            color: var(--bgThemeColor);
            transform: scale(110%);
        }
        @media (width < 960px) {
            width: min(30vw, 130px);
            height: min(30vw, 130px);
            font-size: min(5vw, 24px); /* TODO: will be replaced with image */
        }
        @media (960px <= width) {
            height: 135px;
            width: 135px;
            font-size: 150%; /* SAME: will be replaced with image */
        }
    }
}

div.linkButtons.expandable {
    @media (width < 960px) {
        overflow: hidden;

        max-height: calc((min(30vw, 130px) + 0.6rem) * 2 + 5px);

        #more-btn:checked ~ & {
            height: auto;
            max-height: calc((min(30vw, 130px) + 0.6rem) * 4 + 15px);
        }

        transition: 0.4s;

        & ~ label.more-btn {
            span {
                color: var(--bgThemeColor);
                &::before {
                    content: "さらに表示";
                }
            }
            #more-btn:checked ~ & span {
                &::before {
                    content: "表示を減らす";
                }
            }
        }
    }
}

.more-btn {
    @media (960px <= width) {
        display: none;
    }
    @media (width < 960px) {
        display: block;
        width: 100%;
        border: 1px solid var(--pColor);
        box-shadow: 0 0 4px var(--shadowColor);
        border-radius: 8px;
        font-size: 19px;
        background-color: var(--mainBlueColor);
        color: white;
        text-align: center;
        margin-top: 5px;
        padding: 10px 0;
    }
}

/*時間割*/
.classSchedule,
.examSchedule {
    margin: 1em;
    border-collapse: collapse;
    background: var(--bgPlainColor);
}
.classSchedule {
    width: 15em;
}
.examSchedule {
    width: 20em;
}
.classSchedule th,
.examSchedule th {
    border: 1px solid var(--pColor);
    font-weight: normal;
    padding: 3px 0;
}
.classSchedule th {
    background: orange;
    color: black;
}
.examSchedule th {
    background: blue;
    color: white;
}
.classSchedule td,
.examSchedule td {
    text-align: center;
    padding: 2px 0;
    border: 1px solid var(--pColor);
}

